--- a/project2.ipynb
+++ b/project2.ipynb
@@ -75,16 +75,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/iamgroot42/blosum.git (from -r requirements.txt (line 1))\n",
+      "  Cloning https://github.com/iamgroot42/blosum.git to /private/var/folders/wd/hcpwc24x7354wrbwfblgvjgm0000gn/T/pip-req-build-2beasoid\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/iamgroot42/blosum.git /private/var/folders/wd/hcpwc24x7354wrbwfblgvjgm0000gn/T/pip-req-build-2beasoid\n",
+      "  Resolved https://github.com/iamgroot42/blosum.git to commit 433ed2f1b55fa010ad1b4b2a84158c1f38ddeaf6\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: biopython in /Users/jennaherman/anaconda3/lib/python3.7/site-packages (from -r requirements.txt (line 2)) (1.79)\n",
+      "Requirement already satisfied: tqdm in /Users/jennaherman/anaconda3/lib/python3.7/site-packages (from -r requirements.txt (line 3)) (4.32.1)\n",
+      "Requirement already satisfied: networkx in /Users/jennaherman/anaconda3/lib/python3.7/site-packages (from -r requirements.txt (line 4)) (2.3)\n",
+      "Requirement already satisfied: pokemons in /Users/jennaherman/anaconda3/lib/python3.7/site-packages (from -r requirements.txt (line 5)) (1.0.3)\n",
+      "Requirement already satisfied: numpy in /Users/jennaherman/anaconda3/lib/python3.7/site-packages (from biopython->-r requirements.txt (line 2)) (1.21.6)\n",
+      "Requirement already satisfied: decorator>=4.3.0 in /Users/jennaherman/anaconda3/lib/python3.7/site-packages (from networkx->-r requirements.txt (line 4)) (4.4.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.2.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3.7 install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,8 +257,8 @@
     "        m[0, j] = gapPenalty(j)\n",
     "    for i in range(1, len(s1) + 1):\n",
     "        for j in range(1, len(s2) + 1):         \n",
-    "            m[i, j] = max(chain((gapPenalty(g) + m[i, j - g] for g in range(1, j)),\n",
-    "                                (gapPenalty(g) + m[i - g, j] for g in range(1, i)),   \n",
+    "            m[i, j] = max(chain((gapPenalty(g) + m[i, j - g] for g in range(1, j+1)),\n",
+    "                                (gapPenalty(g) + m[i - g, j] for g in range(1, i+1)),   \n",
     "                                [(match(s1[i - 1], s2[j - 1]) + m[i - 1, j - 1])]))\n",
     "    return m\n",
     "    \n",
@@ -282,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,11 +364,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-GTTCT--TACTTCGAAG-GCTGTGCTCCG----CTCACCATCCAGAGCGGAGGTGCGGACC-T-TA-AACTCA-CTCC--TGGA----GA-A--AGATCTGCAAGTGC-GCAGAGAGAAGACTGGCAGTGGAGCATGCATCTGGAGGGCAGAGACGGC-A-GGCGGTACCCCGGCGCGCCGGCG-GTGGAGCTCCTGCAGACGTCCGTGCC-CAGCGGACTCGCT-GAACTTGTGGC--CGGCA-AGC\n",
+      "CccTCTGGggCTgC-AAGTGC-cTGCTgaGAAATCTtA-CA-CC--AG-GGttGTGC--tCCATCcACgACTCAGagCCTTTGGATCTGGACACTAGA-CTtC-AcTGCTG--GAGAG-AGA-T--CAG-cGAG--T-CATC---A-GaCAGA-tCaGCAACGG-GG-A--CatGCGC-CtaGaGAacaaAG-aCaT-CAG--G-CtG-GCCTCAGCcG--T-GCTGGAAgTaG-aGCTACacCAGA-C\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "a = showAlignment(human_oca2,mouse_oca2,linearGap,simpleMatch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "def affineGap2(n, gp = -0.2, gn = -0.2):\n",
+    "    return gp + (n - 1) * gn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------G-T-----T-C-T--T---A---CTT-CGA--A-GG-CTGTGCTCC--GCTCAC--CATCCAGAG-C---GGAGGTGC-GGAC-CTTAA-AC-TCACT-CCTGGAGA-AAGATC-TGC-AAGTGC--GCAGA-GAGA--AG--ACTGGCAGTGGAGCAT--GCATCT-G-G-AGGGC-AGAGAC--GGCAGGC-GGTACCC-C-GGCGCG-CCGGCGGTGG-AGCTCCTGCAGACGTCCGTGCCCAGCGGACTCGCTGAACTTGTGGCCGGCAAGC\n",
+      "CCCTCTGGGGCTGCAAGTGCCTGCTGAGAAATCTTAC-ACCAGGGT-TGTGCTCCAT-C-CACGAC-T-CAGAGCCTTTGGA--T-CTGGACACT--AGACTTCACTG-CTGGAGAG-AGATCA-GCG-AGT-CAT-CAGAC-AGATCAGCAAC-G---G-GGA-CATGCGC--CTAGAGAA---CAA-AGACAT--CAGGCTGG---CCTCA-GC-CGT---GC--TGGAAG----T--AGA-G--C-T----A-C--AC---C---A---------G---A-C\n",
+      "112.1999999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = showAlignmentG(human_oca2,mouse_oca2,affineGap2,simpleMatch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def affineGap3(n, gp = -0.1, gn = -0.2):\n",
+    "    return gp + (n - 1) * gn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------G----T-----T--CT--T-A-----CTT-CGA--A-GG-CTGTGCTCC--GCTCAC--CATCCAGAG-C---GGAGGTGC-GGAC-CTTA-AAC-TCACT-CCTGGAGA-AAGATC-TGC-AAGTGC--GCAGA-GAGA--AG--ACTGGCAGTGGAGCAT--GCATCT-G-G-AGGGC-AGAGAC--GGCAGGC-GGTACC-C-CGGCGCG-CCGGCGGTGG-AGCTCCTGCAGACGTCCGTGCCCAGCGGACTCGCTGAACTTGTGGCCGGCAAGC\n",
+      "CCCTCTGGGGCTGCAAGTGCCTGCTGAGAAATCTTAC-ACCAGGGT-TGTGCTCCAT-C-CACGAC-T-CAGAGCCTTTGGA--T-CTGGACAC-TAG-ACTTCACTG-CTGGAGAG-AGATCA-GCG-AGT-CAT-CAGAC-AGATCAGCAAC--G--G-GGA-CATGCGC--CTAGAGAA---CAA-AGACAT--CAGGCTGG--CCTCA--GC-CGT---GC--TGGAAG----T--AGA-G--C-T----A-C--A--C-C---A----------G--A-C\n",
+      "126.10000000000025\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = showAlignmentG(human_oca2,mouse_oca2,affineGap3,simpleMatch)"
    ]
   },
   {
@@ -359,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +461,7 @@
        "'KCGV'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,11 +474,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "aminoHuman = utils.convert_to_amino(human_oca2)\n",
+    "aminoMouse = utils.convert_to_amino(mouse_oca2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VLTSKAVLRS-----------PSRAEVRTLNSL----L-----E------KDLQVR----RE----------KTGSGACIWRAETAGGTPARRRWSSCRRPCPADSLNLWPAS\n",
+      "--pSgA--aSAC_EILHQGCAPS-----TtqSLWIWTLDFTAGERSASHQtD-QqRGHAPREQRHQAGLSRA--GS-----RA-----TP--------------D--------\n",
+      "-13.799999999999999\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = showAlignmentG(aminoHuman, aminoMouse, affineGap, simpleMatch)"
    ]
   },
   {
@@ -417,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here_"
+    "A negative value in the matrix M would indicate the the ratio $\\frac{q_{ij}}{p_ip_j}$ is less than 1, because $log$ of a value less than 1 yields a negative number. Thus, a negative value in the matrix M would indicate that the frequency of amino acids i and j observed to align in related sequences is less than the frequencies of occurrence of i and j. "
    ]
   },
   {
@@ -435,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here_"
+    "BLOSUM50 means roughly 50% pairwise similarity, and BLOSUM60 means roughly 60% pairwise similarity. Thus, BLOSUM50 has roughly 50% evolutionary divergence and BLOSUM60 has roughly 40% evolutionary divergence. Therefore, BLOSUM50 has more evolutionary divergence. "
    ]
   },
   {
@@ -450,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,18 +572,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VLTSKAVLRSPSRAEVRTLNSLLEKDLQVRREKTGSGACIWRAETAGGTPARRRWSSCRRPCPADSLNLWPAS\n",
+      "----psgaaSac_eilhqgcapsttqslwiwtldftagersashqtdqqrghapreqrhqaglsragsratpd\n",
+      "-71\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_Type your answer here_"
+    "r = readAlignment(aminoHuman, aminoMouse, blosum_matrix, linearGap, simpleMatch)\n",
+    "print (r[0] + \"\\n\" + r[1] + \"\\n\" + str(r[2]))"
    ]
   },
   {
@@ -487,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Type your answer here_"
+    "They are very different. 1a has an alignment score of 25, while 2c has an alignment score of -71. However 2c is using the amino acid sequences while 1a is using the genome sequences, so it is plausible that this is contributing to the discrepancy. Regardless of that though, mice and humans are biologically very different creatures. Thus, a high negative alignment score seems a lot more plausible than a positive score, so 2c seems more plausibl than 1a. "
    ]
   },
   {
@@ -536,6 +653,7 @@
     "    # (as shown in the examples below).\n",
     "    \n",
     "    # Your code here (implement)\n",
+    "    \n",
     "    pass"
    ]
   },
@@ -1086,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
