project2.ipynb updated

--- a/project2.ipynb
+++ b/project2.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +85,8 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/iamgroot42/blosum.git (from -r requirements.txt (line 1))\n",
-      "  Cloning https://github.com/iamgroot42/blosum.git to /private/var/folders/wd/hcpwc24x7354wrbwfblgvjgm0000gn/T/pip-req-build-k0q6__fc\n",
-      "  Running command git clone --filter=blob:none --quiet https://github.com/iamgroot42/blosum.git /private/var/folders/wd/hcpwc24x7354wrbwfblgvjgm0000gn/T/pip-req-build-k0q6__fc\n",
+      "  Cloning https://github.com/iamgroot42/blosum.git to /private/var/folders/wd/hcpwc24x7354wrbwfblgvjgm0000gn/T/pip-req-build-gai5g6cr\n",
+      "  Running command git clone --filter=blob:none --quiet https://github.com/iamgroot42/blosum.git /private/var/folders/wd/hcpwc24x7354wrbwfblgvjgm0000gn/T/pip-req-build-gai5g6cr\n",
       "  Resolved https://github.com/iamgroot42/blosum.git to commit 433ed2f1b55fa010ad1b4b2a84158c1f38ddeaf6\n",
       "  Installing build dependencies ... \u001b[?25ldone\n",
       "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": 698,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,6 +1006,7 @@
     "    G = nx.Graph()\n",
     "    row = 0 \n",
     "    col = 0 \n",
+    "    originalDist = d.copy()\n",
     "    while len(d) > 1: \n",
     "        Q = np.zeros((len(d), len(d)))\n",
     "        for i in range(len(d)): \n",
@@ -1080,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 700,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 701,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1158,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 524,
+   "execution_count": 703,
    "metadata": {},
    "outputs": [
     {
@@ -1410,13 +1411,7 @@
       "5.999999999999999\n",
       "TCCGACCGA-CTAGCTTCGTACA-CTGCCAACCGC-----AT\n",
       "TaCaACCaAGCaAGCT--G--CAGgTG-tAA-CGCGGTTGA-\n",
-      "6.8\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "6.8\n",
       "TCCGACCGACTAGCTTCGTA--------CACTGCCAACCGCAT---\n",
       "----AgCaACTAG----GTAATAAATTGCA-TGC--AggGCgTTCC\n",
       "4.800000000000001\n",
@@ -1443,7 +1438,13 @@
       "8.399999999999999\n",
       "-TGACGCATGCTA-ATGCCCCAAAGT--C-TCGACAAG--TC--\n",
       "TTGACG-----TAGAT-CCCC---GTTGCATCGACAAGCATCAA\n",
-      "15.199999999999996\n",
+      "15.199999999999996\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "TGACG--CA-----TGCTAATGCCCCAAAGTCTCG-ACAAGT----C\n",
       "--A-GTTCAGGGATTG-TAATtC------GTCT-GTA-gAGTTGGGC\n",
       "6.2\n",
@@ -1671,13 +1672,7 @@
       "5.0\n",
       "TGTGTTGTAGCCAA--AGCCG-AATAATCTAATT--A---A---CG----\n",
       "--------AG-CAACTAG--GTAATA----AATTGCATGCAGGGCGTTCC\n",
-      "6.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "6.0\n",
       "------TGTGT-TGTA--GCCAAAGCCGAATAATCTAAT-TAA---CG\n",
       "CACGCATGT-TAT-TATGGC-----CC------TCTAtTGTAtGCCCt\n",
       "3.5999999999999996\n",
@@ -1716,7 +1711,13 @@
       "1.8000000000000003\n",
       "-------TA--CAACCAAGC-----AAGCTGCAGGTGTAACGCGGTTGA\n",
       "TGTGTTGTAGCCA---AAGCCGAATAAtCT--A-aT-TAACG-------\n",
-      "5.0\n",
+      "5.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "TA-CAACCAAGCAA------GC-TGCAGGTGTAACGCGGTTGA\n",
       "-AGCAACtAgGtAATAAATTGCATGCAGG------GC-GTTcc\n",
       "9.0\n",
@@ -1831,57 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 525,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0. ,  5.2,  7.6,  5.6,  4.2,  6.2, 11.8, 10.2,  8.8,  3.4,  7.2,\n",
-       "         3.8,  3.4,  6. ,  5.6],\n",
-       "       [ 5.2,  0. ,  4.8,  5.4,  5. ,  6.4,  6.6,  4.8,  5.6,  2.6,  6.6,\n",
-       "         5. ,  2. ,  1.2,  2.8],\n",
-       "       [ 7.6,  4.8,  0. ,  9.8,  4.6,  6.2,  9. ,  5. ,  5. , 11.2,  5.2,\n",
-       "         4.8,  5.6,  7.2,  5.4],\n",
-       "       [ 5.6,  5.4,  9.8,  0. ,  8.2,  5.4,  7.8, 12.8,  4.4,  5. ,  6.8,\n",
-       "         8.6,  5.6,  2. ,  4.2],\n",
-       "       [ 4.2,  5. ,  4.6,  8.2,  0. ,  8.8,  9.4,  4.2,  7.8,  2.8,  9. ,\n",
-       "         5.2,  7.2,  7.4,  5.8],\n",
-       "       [ 6.2,  6.4,  6.2,  5.4,  8.8,  0. ,  8.4,  9. ,  2.2,  6.6,  4.2,\n",
-       "         6. ,  6.8,  4.8,  6. ],\n",
-       "       [11.8,  6.6,  9. ,  7.8,  9.4,  8.4,  0. , 15.2,  6.2,  6.8,  9.8,\n",
-       "         7.6,  5. ,  6.6,  9.4],\n",
-       "       [10.2,  4.8,  5. , 12.8,  4.2,  9. , 15.2,  0. ,  3.4,  6.8,  9.8,\n",
-       "         6.8,  4.2,  4.8,  3. ],\n",
-       "       [ 8.8,  5.6,  5. ,  4.4,  7.8,  2.2,  6.2,  3.4,  0. ,  6. ,  7.2,\n",
-       "         3.6,  6.4,  7.8,  6. ],\n",
-       "       [ 3.4,  2.6, 11.2,  5. ,  2.8,  6.6,  6.8,  6.8,  6. ,  0. ,  8.4,\n",
-       "         7.4, 10.2, 11.6,  7.6],\n",
-       "       [ 7.2,  6.6,  5.2,  6.8,  9. ,  4.2,  9.8,  9.8,  7.2,  8.4,  0. ,\n",
-       "         7.8,  1.8,  1.6,  3.8],\n",
-       "       [ 3.8,  5. ,  4.8,  8.6,  5.2,  6. ,  7.6,  6.8,  3.6,  7.4,  7.8,\n",
-       "         0. ,  5. ,  6. ,  3.6],\n",
-       "       [ 3.4,  2. ,  5.6,  5.6,  7.2,  6.8,  5. ,  4.2,  6.4, 10.2,  1.8,\n",
-       "         5. ,  0. ,  9. ,  2.2],\n",
-       "       [ 6. ,  1.2,  7.2,  2. ,  7.4,  4.8,  6.6,  4.8,  7.8, 11.6,  1.6,\n",
-       "         6. ,  9. ,  0. ,  6.6],\n",
-       "       [ 5.6,  2.8,  5.4,  4.2,  5.8,  6. ,  9.4,  3. ,  6. ,  7.6,  3.8,\n",
-       "         3.6,  2.2,  6.6,  0. ]])"
-      ]
-     },
-     "execution_count": 525,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1890,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 706,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,53 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Grumpig', 'intermediate_7'),\n",
-       " ('intermediate_7', 'intermediate_5'),\n",
-       " ('intermediate_5', 'intermediate_1'),\n",
-       " ('intermediate_1', 'Grovyle'),\n",
-       " ('intermediate_1', 'Slurpuff'),\n",
-       " ('intermediate_5', 'Drapion'),\n",
-       " ('intermediate_7', 'intermediate_10'),\n",
-       " ('intermediate_10', 'intermediate_6'),\n",
-       " ('intermediate_6', 'Beheeyem'),\n",
-       " ('intermediate_6', 'Raichu'),\n",
-       " ('intermediate_10', 'intermediate_11'),\n",
-       " ('intermediate_11', 'intermediate_9'),\n",
-       " ('intermediate_9', 'intermediate_8'),\n",
-       " ('intermediate_8', 'intermediate_4'),\n",
-       " ('intermediate_4', 'Snorlax'),\n",
-       " ('intermediate_4', 'Doduo'),\n",
-       " ('intermediate_8', 'Stantler'),\n",
-       " ('intermediate_9', 'Sawsbuck'),\n",
-       " ('intermediate_11', 'intermediate_12'),\n",
-       " ('intermediate_12', 'intermediate_3'),\n",
-       " ('intermediate_3', 'intermediate_2'),\n",
-       " ('intermediate_2', 'Vaporeon'),\n",
-       " ('intermediate_2', 'Shaymin'),\n",
-       " ('intermediate_3', 'Ho-Oh'),\n",
-       " ('intermediate_12', 'intermediate_13'),\n",
-       " ('intermediate_13', 'Toucannon'),\n",
-       " ('intermediate_13', 'Dunsparce')]"
-      ]
-     },
-     "execution_count": 531,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 709,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2059,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 711,
    "metadata": {},
    "outputs": [
     {
@@ -2079,7 +1984,7 @@
        " ('intermediate_12', 'intermediate_13', {'weight': 1.3859374999999994})]"
       ]
      },
-     "execution_count": 533,
+     "execution_count": 711,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2090,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 712,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2100,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 713,
    "metadata": {},
    "outputs": [
     {
